--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container">
         <div class="container-number">
 
-        <div class="square hidden">1</div>
+        <!-- <div class="square hidden">1</div>
         <div class="square">2</div>
         <div class="square">3</div>
         <div class="square">4</div>
-        <div class="square">5</div>
+        <div class="square">5</div> -->
 
     </div>
     </div>
